--- a/styles/general.scss
+++ b/styles/general.scss
@@ -6,4 +6,22 @@ body {
   border: 8px solid #f1f1f1;
   background: #f1f1f1;
   font-family: "Hind";
+
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba($color-blue, 0.3);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $color-red;
+  }
+}
+
+:global {
+  body.modal--active {
+    overflow: hidden;
+  }
 }
